[FIX] mass_mailing: move buttons up on tablet and fix their spacings
The buttons on the Mailing Lists page were under the content and felt
weirdly placed. These have been moved up on smaller devices to be next
to the Total Contacts column, making the visual result more balanced.
Note that these buttons are only visible on tablet and desktop, not
mobile.

The buttons' spacings have been fixed so as to not touch one another.

This commit also fixes the padding on either side of the ungrouped 
Kanban card to be aligned with the control panel.

task-3378519
part of task-3326263

--- a/addons/mass_mailing/static/src/scss/mass_mailing.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.scss
@@ -121,6 +121,8 @@
             display: none !important;
         }
         .o_mailing_list_kanban_ungrouped {
+            --KanbanRecord-padding-h: #{$o-horizontal-padding};
+
             .o_mailing_list_kanban_stats > div {
                 min-width: 70px;
             }
